# R-pandoc

./: .travis.yml  LICENSE  Main.hs  R-pandoc.cabal  README.md  demo.html  demo.md  stack.yaml
src/: Main.hs
src/Text/Pandoc/: R.hs
test/: cleanTests.sh  demo.md  test1.md  test2.md  test3.md  test4.md  tests.sh
