name:                R-pandoc
version:             0.1
synopsis:            A pandoc filter to express R plots inside markdown
-- description:
license:             BSD3
license-file:        LICENSE
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
category:            Text
build-type:          Simple
Bug-reports:         http://github.com/cdupont/R-pandoc/issues
Extra-source-files:  README.md
cabal-version:       >=1.10
Source-repository head
  type:     git
  location: http://github.com/cdupont/R-pandoc.git


executable R-pandoc
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.6 && < 4.9,
                       pandoc-types >= 1.12.4.5 && < 1.13,
                       directory >= 1.2 && < 1.3,
                       filepath >= 1.3 && < 1.5,
                       optparse-applicative >= 0.11 && < 0.12,
                       process -any,
                       monad-loops -any
  -- hs-source-dirs:
  default-language:    Haskell2010
